Fixes issue with circle modal on mobile

--- a/_includes/components/universal/Tooltip/styles.scss
+++ b/_includes/components/universal/Tooltip/styles.scss
@@ -62,6 +62,7 @@
 
   &.is-open {
     display: block;
+    z-index: 80;
   }
 
   &.is-important {
